# asseteer

./: .beans.yml  .gitignore  .prettierrc  CLAUDE.md  README.md  UI_IMPROVEMENT_PLAN.md  audio-search-clap-implementation.md  clap-candle-poc.md  clap-python-integration-plan.md  clap-simplified-implementation-summary.md  future_todo.md  implementation-plan.md  mvp-implementation-plan.md  package-lock.json  package.json  text-search-implementation.md  vite.config.js
.beans/: asseteer-0l36--investigate-onnx-runtime-for-clap-inference-speedu.md  asseteer-12yf--uv-binary-download-and-management-in-rust.md  asseteer-1l8g--database-info-panel-in-settings.md  asseteer-1lk1--search-by-audio-find-similar-sounds.md  asseteer-1oj2--dual-fts5-tables-trigram-unicode61.md  asseteer-1r6b--normalize-paths-to-forward-slashes-at-write-time.md  asseteer-1vw2--switch-fts5-from-trigram-to-unicode61-tokenizer.md  asseteer-260m--audioplayer-progress-bar-seek-uses-keyboard-event.md  asseteer-2cd5--folder-removal-wording-is-confusing-and-fts-tables.md  asseteer-2mjx--pipeline-io-extract-next-batch-while-current-proce.md  asseteer-2n9u--lazy-load-thumbnails-on-demand.md  asseteer-38rb--frontend-code-cleanup-for-initial-release.md  asseteer-3akk--errors-not-shown-in-clapprocessingcard-after-proce.md  asseteer-3n6g--investigate-batch-db-writes-for-import-stage-simil.md  asseteer-3slc--investigate-better-rateeta-estimation-during-proce.md  asseteer-40vq--audio-processing-start-has-no-feedback-before-prog.md  asseteer-41d7--show-in-folder-for-images-broken-for-nested-zips-p.md  asseteer-43sc--center-add-folder-button-in-empty-folders-view-not.md  asseteer-4cr7--show-elapsedtotal-duration-during-and-after-scanpr.md  asseteer-4eb1--statusbar-show-clap-server-status.md  asseteer-4v5r--unified-library-replace-searchexplore-toggle-with.md  asseteer-4zcr--investigate-and-optimize-db-size.md  asseteer-50a1--optimize-non-nested-zip-extraction-staged-dispatch.md  asseteer-526f--clap-processing-performance.md  asseteer-5kja--clap-integration-uv-managed-setup-and-ux-improveme.md  asseteer-5m6z--increase-clap-concurrency-for-io-pipelining.md  asseteer-5nvp--multi-slot-memory-aware-zipcache.md  asseteer-5s5g--table-view-open-lightbox-when-clicking-thumbnail.md  asseteer-60j7--fix-timeout-including-zipgate-wait-time.md  asseteer-64oi--ui-redesign-sidebar-folder-panel-and-search-improv.md  asseteer-6ae7--settings-ui-for-semantic-search.md  asseteer-6axo--folder-view-show-current-scan-path-during-active-s.md  asseteer-6o1x--import-warnings-not-surfaced-to-user-eg-invalid-zi.md  asseteer-6wge--show-in-file-explorer-fails-for-assets-nested-insi.md  asseteer-84nn--processing-start-all-stop-all-race-leaves-frontend.md  (+117 more)
.claude/: settings.local.json
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: clap_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: concurrent_tests.rs  lib.rs  main.rs  models.rs  test_helpers.rs  thumbnail_worker.rs  utils.rs  zip_cache.rs
src-tauri/src/audio/: clap_model.rs  features.rs  mod.rs  resample.rs
src-tauri/src/clap/: cache.rs  client.rs  embedding.rs  job_object.rs  logs.rs  mod.rs  server.rs  uv.rs
src-tauri/src/clap_model/: audio_encoder.rs  audio_preprocessing.rs  config.rs  mod.rs  text_encoder.rs
src-tauri/src/commands/: assets.rs  database.rs  folders.rs  mod.rs  process.rs  rescan.rs  scan.rs  search.rs  tasks.rs
src-tauri/src/database/: init.rs  mod.rs  schema.rs
src-tauri/src/task_system/: db_writer.rs  manager.rs  mod.rs  processor.rs  runner.rs  types.rs  work_queue.rs
src-tauri/src/task_system/handlers/: metadata.rs  mod.rs  thumbnail.rs
(+188 files in other folders)
