[package]
name = "asseteer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asseteer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
crossbeam = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rusqlite = "0.32"

# File system and parallel processing
walkdir = "2.5"
rayon = "1.10"
zip = { version = "2.2", default-features = false, features = ["deflate-zlib-ng", "deflate64", "lzma", "bzip2", "zstd"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
fast_image_resize = "5.0"
webp = "0.3"

# Audio metadata extraction
symphonia = { version = "0.5", features = ["all"] }

# Utilities
base64 = "0.22"
chrono = "0.4"
num_cpus = "1"
anyhow = "1.0"
once_cell = "1.19"

# HTTP client for CLAP server
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Archive extraction (for uv binary download)
flate2 = "1"
tar = "0.4"

# Windows Job Object for child process cleanup
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_System_SystemInformation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
tempfile = "3"

